--- a/Marc-Schlueter-Grundgeruest-051/BookManager051/Logic.Ui/Logic.Ui.csproj
+++ b/Marc-Schlueter-Grundgeruest-051/BookManager051/Logic.Ui/Logic.Ui.csproj
@@ -45,14 +45,19 @@
     <Compile Include="Base\IViewModel.cs" />
     <Compile Include="Base\ViewModelBase.cs" />
     <Compile Include="Base\ViewModelSyncCollection.cs" />
+    <Compile Include="BookManagerInitializer.cs" />
     <Compile Include="MessageBusMessages\OpenNewClientWindowMessage.cs" />
+    <Compile Include="MessageBusMessages\OpenRatingWindowMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModelLocator.cs" />
+    <Compile Include="ViewModels\AddRatingWindowViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
-    <Compile Include="ViewModels\NewClientWindowViewModel.cs" />
-    <Compile Include="Wrapper\ClientCollectionViewModel.cs" />
-    <Compile Include="Wrapper\ClientViewModel.cs" />
+    <Compile Include="Wrapper\BookCollectionViewModel.cs" />
+    <Compile Include="Wrapper\BookViewModel.cs" />
+    <Compile Include="Wrapper\RatingViewModel.cs" />
+    <Compile Include="Wrapper\UserCollectionViewModel.cs" />
+    <Compile Include="Wrapper\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Business.Model\Business.Model.csproj">
