checkpoint with upload/download working

--- a/Marc-Schlueter-Grundgeruest-051/BookManager051/Ui.Desktop/Ui.Desktop.csproj
+++ b/Marc-Schlueter-Grundgeruest-051/BookManager051/Ui.Desktop/Ui.Desktop.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UploadBookWindow.xaml.cs">
+      <DependentUpon>UploadBookWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="AddRatingWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -74,6 +77,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="NewClientWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UploadBookWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
