--- a/Marc-Schlueter-Grundgeruest-051/BookManager051/Logic.Ui/Logic.Ui.csproj
+++ b/Marc-Schlueter-Grundgeruest-051/BookManager051/Logic.Ui/Logic.Ui.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,13 +47,17 @@
     <Compile Include="Base\ViewModelBase.cs" />
     <Compile Include="Base\ViewModelSyncCollection.cs" />
     <Compile Include="BookManagerInitializer.cs" />
+    <Compile Include="MessageBusMessages\BookUploadMessage.cs" />
     <Compile Include="MessageBusMessages\OpenNewClientWindowMessage.cs" />
-    <Compile Include="MessageBusMessages\OpenRatingWindowMessage.cs" />
+    <Compile Include="MessageBusMessages\OpenAddRatingWindowMessage.cs" />
+    <Compile Include="MessageBusMessages\OpenUploadBookWindowMessage.cs" />
+    <Compile Include="MessageBusMessages\RatingAddedMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="ViewModels\AddRatingWindowViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\UploadBookWindowViewModel.cs" />
     <Compile Include="Wrapper\BookCollectionViewModel.cs" />
     <Compile Include="Wrapper\BookViewModel.cs" />
     <Compile Include="Wrapper\RatingViewModel.cs" />
